[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/texture_fonts/Assets/TransparentBG_small.png" type="Texture" id=1]
[ext_resource path="res://addons/texture_fonts/UI/Components/File.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=1]
resource_local_to_scene = true
bg_color = Color( 0.376471, 0.392157, 0.509804, 0 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.823529, 0.894118, 0.87451, 0 )

[node name="File" type="MarginContainer"]
anchor_right = 0.292
anchor_bottom = 0.1
margin_right = -0.00802612
mouse_filter = 2
size_flags_horizontal = 3
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
margin_right = 298.0
margin_bottom = 60.0
mouse_filter = 2
custom_styles/panel = SubResource( 1 )

[node name="ToolButton" type="ToolButton" parent="."]
margin_right = 298.0
margin_bottom = 60.0

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 298.0
margin_bottom = 60.0
mouse_filter = 2
custom_constants/margin_right = 6
custom_constants/margin_top = 6
custom_constants/margin_left = 6
custom_constants/margin_bottom = 6

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_left = 6.0
margin_top = 6.0
margin_right = 292.0
margin_bottom = 54.0
mouse_filter = 2
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ImageContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer"]
margin_right = 48.0
margin_bottom = 48.0
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer/ImageContainer"]
margin_right = 48.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
mouse_filter = 2
size_flags_horizontal = 5
size_flags_vertical = 4
texture = ExtResource( 1 )
expand = true
stretch_mode = 2

[node name="TexturePreview" type="TextureRect" parent="MarginContainer/HBoxContainer/ImageContainer"]
margin_right = 48.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
mouse_filter = 2
size_flags_horizontal = 5
size_flags_vertical = 4
expand = true
stretch_mode = 6

[node name="ClipLabel" type="Control" parent="MarginContainer/HBoxContainer"]
margin_left = 52.0
margin_right = 227.0
margin_bottom = 48.0
rect_clip_content = true
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/ClipLabel"]
anchor_bottom = 1.0
margin_top = 12.0
margin_right = 42.0
margin_bottom = -12.0
size_flags_vertical = 6
text = "Texture"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer"]
margin_left = 231.0
margin_right = 286.0
margin_bottom = 48.0
mouse_filter = 2
custom_constants/margin_top = 12
custom_constants/margin_bottom = 12
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeleteButton" type="Button" parent="MarginContainer/HBoxContainer/MarginContainer"]
margin_top = 12.0
margin_right = 55.0
margin_bottom = 36.0
text = "Delete"

[connection signal="pressed" from="ToolButton" to="." method="_on_ToolButton_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/MarginContainer/DeleteButton" to="." method="_on_DeleteButton_pressed"]
